TA 100-plan: add : 1.2.3 mvp matrix add view matrix note(not finished)

--- a/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
+++ b/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
@@ -47,14 +47,31 @@
 
 #### 变换顺序
 
-当摄像机作为世界坐标系下的一个物体时，将它从模型空间变换到观察空间也是以上面的顺序。而由于摄像机本身相当于一个没有体积的点，将其缩放没有意义，因此仅剩下旋转和平移。
+当摄像机作为世界坐标系下的一个物体时，将它从模型空间变换到观世界空间也是以上面的顺序。而由于摄像机本身相当于一个没有体积的点，将其缩放没有意义，因此仅剩下旋转和平移。
 
 想要将场景中的物体从世界空间变换到观察空间，我们可以想象：
 
-* 将摄像机从模型空间变换到观察空间的变换取反，也就是：
+* 将摄像机从模型空间变换到世界空间的变换取反，也就是：
   * 先逆平移，将摄像机坐标移动到世界坐标的原点
   * 再逆旋转，将摄像机坐标旋转至
     * 摄像机的Y轴与世界坐标系的Y轴重合
     * 摄像机的Z轴与世界坐标系的-Z轴重合
-      * 这是约定俗成的一个规则，初始摄像机总看向世界空间Z轴的负方向，因此总把该方向看作摄像机的正方向
-    * 
+      * 这是约定俗成的一个规则。在初始化摄像机时，总将摄像机初始化为位于世界坐标原点，看向世界空间Z轴的负方向的参数，因此总把该方向看作摄像机的正方向
+    * 摄像机的X轴与世界坐标系的X轴重合
+  * 根据上面的旋转规则，不难看出，观察空间和世界空间形成不同的坐标系系统。若世界空间是右手坐标系，则观察空间一定是左手坐标系，反之亦然
+  * 然而，我们上面做的平移和旋转变换，并不能改变坐标系系统的属性。在这个例子下，由于世界坐标系的Z轴与观察坐标系的Z轴相反，所以我们需要反转Z值来将顶点真正变换到观察坐标系下
+* 如果我们将摄像机视为一个物体，上述的变换则可以看作是将摄像机从世界空间变换回到**摄像机的模型空间**，并改变坐标系系统的属性。
+* 如果我们使空间中的所有物体都随着摄像机做上述的变换，那么就相当于将世界空间中的所有物体都变换到了**摄像机的模型空间**里（并改变了坐标系系统的属性），即观察空间
+
+
+
+### 投影矩阵
+
+将顶点从观察空间变换到裁剪空间
+
+* 这里并没有做真正的投影（将空间坐标变为屏幕坐标），而是为了后面真正的投影做的准备计算
+* 除此之外，投影矩阵将顶点变换到裁剪空间，顾名思义，其另一个作用就是裁剪，裁剪空间可以很方便地判断顶点是否位于摄像机的可见范围内
+  * 即使顶点处于观察空间内，这个顶点也不一定处于摄像机的可见范围内（摄像机的可见范围仅为摄像机正方向前面的一片区域，这里不详细介绍）
+  * 对于不在可见范围内的顶点，我们不需要浪费精力去处理它们，所以需要将它们剔除。然而，并不能简单地抛弃掉顶点，因为孤立的可以被直接抛弃的顶点很少，大多数顶点和其他顶点形成了边、面：
+    * 若形成图元的几个顶点都不在可见范围内，则可以将这些顶点全部丢弃
+    * 若形成图元的几个顶点部分在可见范围内，则需要对这个图元进行裁剪（可能生成新的顶点），留下可见范围内的顶点，丢弃可见范围外的顶点。这就是裁剪矩阵名字的由来
