TA 100-plan: add : 1.2.3 mvp matrix add clip matrix note(not finished)

--- a/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
+++ b/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
@@ -41,8 +41,8 @@
 #### 观察空间
 
 * 以摄像机位置为原点的坐标系产生的空间
-* 摄像机的前方表示这个坐标系的Z轴
-* 摄像机的上方表示这个坐标系的Y轴
+* 摄像机的前方表示这个坐标系的Z轴的正方向或负方向
+* 摄像机的上方表示这个坐标系的Y轴的正方向
 * 摄像机的X轴的方向根据不同的规则（左手/右手坐标系）指向与Y轴和Z轴垂直的两个相反方向
 
 #### 变换顺序
@@ -56,9 +56,11 @@
   * 再逆旋转，将摄像机坐标旋转至
     * 摄像机的Y轴与世界坐标系的Y轴重合
     * 摄像机的Z轴与世界坐标系的-Z轴重合
-      * 这是约定俗成的一个规则。在初始化摄像机时，总将摄像机初始化为位于世界坐标原点，看向世界空间Z轴的负方向的参数，因此总把该方向看作摄像机的正方向
+      * 这是约定俗成的一个规则。在初始化摄像机时，总将摄像机初始化为位于世界坐标原点，看向世界空间Z轴的负方向或者正方向（即观察空间Z轴的正方向或负方向）
+        * 若初始化为看向观察空间Z轴的正方向（世界空间Z轴的负方向），则观察空间中Z值越大代表物体距离摄像机越远
+        * 若初始化为看向观察空间Z轴的负方向（世界空间Z轴的正方向），则观察空间中Z值越小代表物体距离摄像机越远
     * 摄像机的X轴与世界坐标系的X轴重合
-  * 根据上面的旋转规则，不难看出，观察空间和世界空间形成不同的坐标系系统。若世界空间是右手坐标系，则观察空间一定是左手坐标系，反之亦然
+  * 根据上面的旋转规则，不难看出，观察空间和世界空间总是形成不同的坐标系系统。若世界空间是右手坐标系，则观察空间一定是左手坐标系，反之亦然
   * 然而，我们上面做的平移和旋转变换，并不能改变坐标系系统的属性。在这个例子下，由于世界坐标系的Z轴与观察坐标系的Z轴相反，所以我们需要反转Z值来将顶点真正变换到观察坐标系下
 * 如果我们将摄像机视为一个物体，上述的变换则可以看作是将摄像机从世界空间变换回到**摄像机的模型空间**，并改变坐标系系统的属性。
 * 如果我们使空间中的所有物体都随着摄像机做上述的变换，那么就相当于将世界空间中的所有物体都变换到了**摄像机的模型空间**里（并改变了坐标系系统的属性），即观察空间
@@ -69,9 +71,58 @@
 
 将顶点从观察空间变换到裁剪空间
 
+#### 相关定义
+
+* Z Near ：摄像机到近裁剪平面的距离
+* Z Far ：摄像机到远裁剪平面的距离
+* FOV ：field of view，摄像机的视野，一般表示为摄像机竖直方向张开的角度大小
+* aspect ：可理解为摄像机成像平面上宽度（width、X方向）和高度（height、Y方向）的比值
+* width：裁剪平面上水平方向的长度
+* height：裁剪平面上竖直方向的长度
+
+#### 变换顺序
+
 * 这里并没有做真正的投影（将空间坐标变为屏幕坐标），而是为了后面真正的投影做的准备计算
 * 除此之外，投影矩阵将顶点变换到裁剪空间，顾名思义，其另一个作用就是裁剪，裁剪空间可以很方便地判断顶点是否位于摄像机的可见范围内
-  * 即使顶点处于观察空间内，这个顶点也不一定处于摄像机的可见范围内（摄像机的可见范围仅为摄像机正方向前面的一片区域，这里不详细介绍）
+  * 即使顶点处于观察空间内，这个顶点也不一定处于摄像机的可见范围内（摄像机的可见范围仅为摄像机正方向前面的一片区域，这里不详细介绍），即视锥体
   * 对于不在可见范围内的顶点，我们不需要浪费精力去处理它们，所以需要将它们剔除。然而，并不能简单地抛弃掉顶点，因为孤立的可以被直接抛弃的顶点很少，大多数顶点和其他顶点形成了边、面：
     * 若形成图元的几个顶点都不在可见范围内，则可以将这些顶点全部丢弃
-    * 若形成图元的几个顶点部分在可见范围内，则需要对这个图元进行裁剪（可能生成新的顶点），留下可见范围内的顶点，丢弃可见范围外的顶点。这就是裁剪矩阵名字的由来
+    * 若形成图元的几个顶点部分在可见范围内，则需要对这个图元进行裁剪（可能生成新的顶点），留下可见范围内的顶点，丢弃可见范围外的顶点。这就是裁剪空间名字的由来
+* 那么，如何进行变换，使得在变换后的裁剪空间里我们可以快速判断顶点是否在摄像机的可见范围内呢？
+  * 在此之前需要了解齐次坐标的概念，因为在投影变换后坐标的w分量不一定还是1（不了解其次坐标概念的同学可参考其他资料）
+  * 在观察空间里，摄像机的位置代表了观察坐标系的原点。而在裁剪坐标系里，摄像机视锥体（摄像机的可见范围形成的一个椎体）的中心代表裁剪坐标系的原点。因此，投影矩阵需要
+    * 将视锥体的中心移动到坐标系原点，使得经过投影变换后的视锥体，在经过后面的齐次除法（x/w, y/w, z/w, w/w）后生成的正方体的中心处于原点位置。这里的正方体的“中心”定义在不同图形API下各不相同：
+      * 对于OpenGL，正方体的中心为正方体的重心（下面的讲述默认为该标准下）
+      * 对于DirectX，正方体的中心为正方体与XY平面重合的正方形的重心
+    * 将视锥体进行缩放，使得经过投影变换后的视锥体，在经过后面的齐次除法（x/w, y/w, z/w, w/w）后变成一个标准的正方体。
+      * 这里的正方体的坐标范围定义在不同图形API下各不相同：
+        * 对于OpenGL，正方体的x、y、z分量的范围都是[-1,1]（下面的讲述默认为该标准下）
+        * 对于DirectX，正方体的x、y、z分量的范围都是[0,1]
+      * 而投影包括正交投影和透视投影：
+        * 正交投影的视锥体为立方体，因此仅仅对坐标进行简单的缩放就可以将视锥体变换为上面的标准正方体。同时，简单的**缩放变换**并不会改变w分量（始终为1），因此对于正交投影来说，齐次除法前后顶点各个分量的值是不变的
+        * 透视投影比正交投影要更复杂一些，透视投影的视锥体是一个近平面小远平面大的椎体。我们要对其坐标进行缩放，使得其变换结果在经过齐次除法后也能够变成上面的标准正方体。（这个变换矩阵不像上面那么简单，我无法简单地介绍它，但关于这个矩阵的推导已经有了很多优秀的资料，我会在后面给出）
+          * 以两个特殊坐标为例（假设摄像机看向观察空间Z轴的正方向）：
+            * 近平面的一个端点：`（near_width/2, near_height/2, z_near, 1）`
+              * 投影变换后：`（z_near, z_near, -z_near, z_near）`
+              * 齐次除法后：`（1, 1, -1, 1）`
+            * 远平面的一个端点：`（far_width/2, far_height/2, z_far, 1）`
+              * 投影变换后：`（z_far, z_far, z_far, z_far）`
+              * 齐次除法后：`（1, 1, 1, 1）`
+          * 从上面的例子可以观察到：原本在截面上的端点，在经过投影变换和齐次除法后依旧是标准正方体上对应的端点，这也说明这个变换的正确性
+    * 上面的平移和缩放操作并不是必须分离出来的两个步骤，顺序也不固定，只是为了理解方便分开进行描述。且上面讲的针对视锥体的投影变换，实际上是针对所有顶点的变换，“视锥体”只是一个方便理解的虚拟概念，渲染时并不会有这个东西
+    * 关于投影矩阵的推导
+      * 我在视频下方[Mirasupiritto](https://space.bilibili.com/8129772)同学的笔记里看到他有做比较详细的推导：https://www.yuque.com/u12120868/md8ze7/cqkci3
+        * 推导的是整体的投影矩阵，其中虽然贴的的是unity中的摄像机坐标系图片，但实际计算代入坐标时是假设摄像机看向观察空间Z轴的正方向，且基于OpenGL的NDC标准
+        * 不过最后结果的计算有点错误，我验证了一下，其中变量m<sub>22</sub>的结果的分子应该是`far+near`
+      * Games101 的课程中也有进行推导：https://www.bilibili.com/video/BV1X7411F744?p=4
+        * 这里的推导是分步骤进行的，首先将透视投影视锥体变换为类似正交投影的视锥体，然后就可以使用简单的缩放和平移变换将其转换到标准设备坐标系下，推导很精彩，容易理解
+        * 计算时同样假设摄像机看向观察空间Z轴的正方向，且基于OpenGL的NDC标准
+      * 由于标准不统一，投影矩阵的结果往往不是一致的。例如在Unity中，观察空间使用的坐标系是右手坐标系，其余空间均为左手坐标系，且摄像机初始化为看向观察空间Z轴的负方向，Z值越小代表物体距离摄像机越远，观察空间中的近截面和远截面坐标实际上小于0。因此，其在观察变换和投影变换时需要额外反转一次z分量，同时在构建投影矩阵时需要注意负的截面坐标的影响
+  * 完成投影矩阵的变换后，我们根据上面的特殊坐标可以发现：在端点上的坐标经过投影变换后，其x、y、z分量值的绝对值都与w分量相同，而上面的端点实际上都在视锥体的边缘。这就引出了投影变换的性质：
+    * 经过投影变换后，若顶点的x、y、z分量都在[-w，w]范围内，则说明该点位于摄像机的可见范围内
+    * 因此，我们在裁剪空间中可以很方便地判断顶点是否可见，从而进行剔除，这也是投影矩阵的意义所在
+
+#### 在 旋向性
+
+
+
