TA 100-plan: update: 1.2.3 mvp matrix add clip matrix note

--- a/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
+++ b/TA 100-plan Frostwolf_may/1.2.3 图形-MVP矩阵运算.md
@@ -79,25 +79,30 @@
 * aspect ：可理解为摄像机成像平面上宽度（width、X方向）和高度（height、Y方向）的比值
 * width：裁剪平面上水平方向的长度
 * height：裁剪平面上竖直方向的长度
+* ……
 
 #### 变换顺序
 
 * 这里并没有做真正的投影（将空间坐标变为屏幕坐标），而是为了后面真正的投影做的准备计算
+
 * 除此之外，投影矩阵将顶点变换到裁剪空间，顾名思义，其另一个作用就是裁剪，裁剪空间可以很方便地判断顶点是否位于摄像机的可见范围内
   * 即使顶点处于观察空间内，这个顶点也不一定处于摄像机的可见范围内（摄像机的可见范围仅为摄像机正方向前面的一片区域，这里不详细介绍），即视锥体
   * 对于不在可见范围内的顶点，我们不需要浪费精力去处理它们，所以需要将它们剔除。然而，并不能简单地抛弃掉顶点，因为孤立的可以被直接抛弃的顶点很少，大多数顶点和其他顶点形成了边、面：
     * 若形成图元的几个顶点都不在可见范围内，则可以将这些顶点全部丢弃
     * 若形成图元的几个顶点部分在可见范围内，则需要对这个图元进行裁剪（可能生成新的顶点），留下可见范围内的顶点，丢弃可见范围外的顶点。这就是裁剪空间名字的由来
+  
 * 那么，如何进行变换，使得在变换后的裁剪空间里我们可以快速判断顶点是否在摄像机的可见范围内呢？
   * 在此之前需要了解齐次坐标的概念，因为在投影变换后坐标的w分量不一定还是1（不了解其次坐标概念的同学可参考其他资料）
+  
   * 在观察空间里，摄像机的位置代表了观察坐标系的原点。而在裁剪坐标系里，摄像机视锥体（摄像机的可见范围形成的一个椎体）的中心代表裁剪坐标系的原点。因此，投影矩阵需要
     * 将视锥体的中心移动到坐标系原点，使得经过投影变换后的视锥体，在经过后面的齐次除法（x/w, y/w, z/w, w/w）后生成的正方体的中心处于原点位置。这里的正方体的“中心”定义在不同图形API下各不相同：
       * 对于OpenGL，正方体的中心为正方体的重心（下面的讲述默认为该标准下）
       * 对于DirectX，正方体的中心为正方体与XY平面重合的正方形的重心
+      
     * 将视锥体进行缩放，使得经过投影变换后的视锥体，在经过后面的齐次除法（x/w, y/w, z/w, w/w）后变成一个标准的正方体。
       * 这里的正方体的坐标范围定义在不同图形API下各不相同：
-        * 对于OpenGL，正方体的x、y、z分量的范围都是[-1,1]（下面的讲述默认为该标准下）
-        * 对于DirectX，正方体的x、y、z分量的范围都是[0,1]
+        * 对于OpenGL，正方体内顶点的x、y、z分量的范围都是[-1,1]（下面的讲述默认为该标准下）
+        * 对于DirectX，正方体内顶点的x、y、z分量的范围都是[0,1]
       * 而投影包括正交投影和透视投影：
         * 正交投影的视锥体为立方体，因此仅仅对坐标进行简单的缩放就可以将视锥体变换为上面的标准正方体。同时，简单的**缩放变换**并不会改变w分量（始终为1），因此对于正交投影来说，齐次除法前后顶点各个分量的值是不变的
         * 透视投影比正交投影要更复杂一些，透视投影的视锥体是一个近平面小远平面大的椎体。我们要对其坐标进行缩放，使得其变换结果在经过齐次除法后也能够变成上面的标准正方体。（这个变换矩阵不像上面那么简单，我无法简单地介绍它，但关于这个矩阵的推导已经有了很多优秀的资料，我会在后面给出）
@@ -109,20 +114,70 @@
               * 投影变换后：`（z_far, z_far, z_far, z_far）`
               * 齐次除法后：`（1, 1, 1, 1）`
           * 从上面的例子可以观察到：原本在截面上的端点，在经过投影变换和齐次除法后依旧是标准正方体上对应的端点，这也说明这个变换的正确性
+      
     * 上面的平移和缩放操作并不是必须分离出来的两个步骤，顺序也不固定，只是为了理解方便分开进行描述。且上面讲的针对视锥体的投影变换，实际上是针对所有顶点的变换，“视锥体”只是一个方便理解的虚拟概念，渲染时并不会有这个东西
+    
     * 关于投影矩阵的推导
       * 我在视频下方[Mirasupiritto](https://space.bilibili.com/8129772)同学的笔记里看到他有做比较详细的推导：https://www.yuque.com/u12120868/md8ze7/cqkci3
         * 推导的是整体的投影矩阵，其中虽然贴的的是unity中的摄像机坐标系图片，但实际计算代入坐标时是假设摄像机看向观察空间Z轴的正方向，且基于OpenGL的NDC标准
         * 不过最后结果的计算有点错误，我验证了一下，其中变量m<sub>22</sub>的结果的分子应该是`far+near`
+        
       * Games101 的课程中也有进行推导：https://www.bilibili.com/video/BV1X7411F744?p=4
         * 这里的推导是分步骤进行的，首先将透视投影视锥体变换为类似正交投影的视锥体，然后就可以使用简单的缩放和平移变换将其转换到标准设备坐标系下，推导很精彩，容易理解
         * 计算时同样假设摄像机看向观察空间Z轴的正方向，且基于OpenGL的NDC标准
+        
       * 由于标准不统一，投影矩阵的结果往往不是一致的。例如在Unity中，观察空间使用的坐标系是右手坐标系，其余空间均为左手坐标系，且摄像机初始化为看向观察空间Z轴的负方向，Z值越小代表物体距离摄像机越远，观察空间中的近截面和远截面坐标实际上小于0。因此，其在观察变换和投影变换时需要额外反转一次z分量，同时在构建投影矩阵时需要注意负的截面坐标的影响
+      
+        * Unity下的推导流程和结果（与《Unity Shader 入门精要》一致）
+      
+          <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.2.3 图形-MVP矩阵运算\unity_projection_cal.png" title="calculation" style="zoom: 50%;" />
+    
   * 完成投影矩阵的变换后，我们根据上面的特殊坐标可以发现：在端点上的坐标经过投影变换后，其x、y、z分量值的绝对值都与w分量相同，而上面的端点实际上都在视锥体的边缘。这就引出了投影变换的性质：
     * 经过投影变换后，若顶点的x、y、z分量都在[-w，w]范围内，则说明该点位于摄像机的可见范围内
     * 因此，我们在裁剪空间中可以很方便地判断顶点是否可见，从而进行剔除，这也是投影矩阵的意义所在
 
-#### 在 旋向性
+#### 裁剪时机
+
+上面提到，我们在进行投影变换，将顶点变换到裁剪空间后，就可以通过判断顶点各个分量是否都在[-w，w]范围内来进行裁剪操作。然后进行真正的投影操作（齐次除法），将顶点坐标变换到标准设备坐标系（NDC）下。这里对于OpenGL，顶点的x、y、z分量的范围都是[-1,1]。
+
+这时，某些同学可能会产生一种疑问：既然齐次除法后坐标范围都是[-1,1]，非常便于计算。而齐次除法前，每个坐标的范围不固定，必须借助第四个分量w才能进行有效判断。那么，为什么不在齐次除法后进行裁剪操作，而要将其提前到齐次除法之前呢？
+
+根据上面对裁剪操作的描述进行分类讨论：
+
+* 形成图元的几个顶点都不在可见范围内
+
+  这种情况下，无论是齐次除法前还是齐次除法后，都能够根据坐标范围做出正确的判断，不影响裁剪的顺序。
+
+* 形成图元的几个顶点部分在可见范围内
+
+  这种情况下，则需要对这个图元进行裁剪（可能生成新的顶点），留下可见范围内的顶点，丢弃可见范围外的顶点。与第一种情况不同，裁剪操作需要生成新的顶点，这就要求我们计算出新的顶点的所有信息，如顶点坐标信息、纹理坐标信息、法线方向信息、颜色信息等。
+
+  一般情况下，我们通过线性插值的方法来计算这些信息，即根据裁剪生成顶点与顶点所在线段的两个端点（一个在可见范围内，一个在可见范围外）的线性关系，插值得到新生成顶点的所有属性。而正是这步线性插值的操作，影响了裁剪操作在渲染流水线中的顺序。
+
+  接下来分别讨论正交投影和透视投影的情况：
+
+  * 对于正交投影来说，其变换矩阵并不会改变w分量的值，因此齐次除法前后顶点的坐标不变，依旧保持了线性关系，可以正常进行线性插值
+  * 而对于透视投影来说，其投影变换矩阵会改变顶点的w分量，导致齐次除法后顶点之间不再是线性关系，若在这里进行裁剪操作时强行使用线性插值，那么最后的插值结果是不正确的。
+
+* 那么，为什么w分量不为1的齐次除法会破坏线性关系呢？
+
+  * 准确的说，并不是w分量不为1的齐次除法会破坏顶点之间的线性关系。在透视投影中，经过投影矩阵变换后的顶点，w分量是不一致的（与顶点的z分量有关）。这就导致，在进行其次除法时，不同分量的缩放值（可以看成一个缩放矩阵变换）不一致，顶点之间当然就没有了线性关系
+  * 而在齐次除法之前，所有的顶点做的都是参数一致的矩阵变换。实际上，在三维空间中，只有旋转变换、缩放变换、错切变换、镜像变换等操作属于线性变换，平移变换、正交投影变换和透视投影变换均不属于线性变换，但是在齐次空间（也就是目前的四维空间）中，这些变换都属于线性变换（可以用一个固定的变换矩阵表示出来）。因此，投影变换后的顶点间依旧保持着线性关系，可以正常进行线性插值。
+
+#### 题外话
+
+在光栅化阶段的三角形遍历中，还需要进行片元间的线性插值，而这时的阶段当然是在齐次除法之后了。因此，在透视投影的情况下，此时的顶点片元之间并不具有线性关系。因此，需要一种透视投影插值校正的方法来得到正确的插值结果。
+
+
+
+
+
+### 参考链接
+
+* https://blog.csdn.net/andylei777/article/details/78333817
+
+* https://blog.51cto.com/u_15273495/2915661
+* https://zhuanlan.zhihu.com/p/370059588
 
 
 
