TA 100-plan: update: TA learning frame update picture link

--- a/TA 100-plan Frostwolf_may/0.2 TA_Learning_Frame.md
+++ b/TA 100-plan Frostwolf_may/0.2 TA_Learning_Frame.md
@@ -25,9 +25,9 @@
 
 # 学习框架
 
-![image-20220406043548485](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\TA_Learning_Frame\01-frame.png)
+![image-20220406043548485](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/TA_Learning_Frame/01-frame.png?raw=true)
 
-![image-20220406044044340](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\TA_Learning_Frame\02-frame.png)
+![image-20220406044044340](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/TA_Learning_Frame/02-frame.png?raw=true)
 
 ## 基础部分
 
@@ -37,7 +37,7 @@
 
 * 设计入门教室系列
 
-  ![image-20220406044409415](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\TA_Learning_Frame\03-artist_basic.png)
+  ![image-20220406044409415](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/TA_Learning_Frame/03-artist_basic.png?raw=true)
 
 * 摄影：北京工业大学公开课：摄影的实用性与艺术性漫谈
 
@@ -45,7 +45,7 @@
 
 * 网易公开课全套计算机专业课程
 
-  ![image-20220406044744939](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\TA_Learning_Frame\04-technology_basic.png)
+  ![image-20220406044744939](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/TA_Learning_Frame/04-technology_basic.png?raw=true)
 
 ### 学习方法
 
