--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -173,13 +173,21 @@
 
 ###### 缩小
 
-放大情况下的一些算法同样可以应用在缩小的情况下，如最邻近算法和双线性插值等。
+放大情况下的一些算法同样可以应用在缩小的情况下，如**最邻近算法**和**双线性插值**等。
 
 上面讲过，缩小情况下的主要问题就是纹理信息的丢失，相邻片元的纹理坐标在纹理上采样时相隔很多个像素，即纹理的信号频率远远大于采样频率。这种情况下，双线性插值能够一定程度上缓解这个问题（有限地增加了采样频率），因为其取的是2x2的像素范围，但是当情况更严重时，纹理的信息依旧会丢失。
 
 解决纹理信息因频率过高而发生信息丢失的一个经典方法就是多级渐进纹理（mipmap），它通过预计算为一张纹理生成多张不同级别的精细程度（逐层减半）的纹理，以此降低纹理信息频率。因此，以原始纹理为顶层，每下面一层是上一层的1/4大小，直到最后一层。最终，生成mipmap的纹理仅比不生成mipmap的纹理多出原纹理近1/3大小的存储。
 
 <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap.png" alt="image-20220506035549390" style="zoom:50%;" />
+
+
+
+完成多级渐进纹理的生成后，下一步是决定什么时候使用哪个级别的纹理进行采样。例如，当屏幕上的相邻片元的UV坐标在要采样的纹理上的坐标的距离小于或等于一个像素的距离时，说明该片元适合使用当前精度的纹理进行采样。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap02.png" alt="image-20220506192710706" style="zoom:50%;" />
+
+
 
 现代的计算机已经能够在硬件级别上完成纹理的过滤操作，当然也可以通过软件或者软硬件同时处理来完成。
 
