TA 100-plan: update: 1.3 texture basis part（not finished）

--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -183,9 +183,45 @@
 
 
 
-完成多级渐进纹理的生成后，下一步是决定什么时候使用哪个级别的纹理进行采样。例如，当屏幕上的相邻片元的UV坐标在要采样的纹理上的坐标的距离小于或等于一个像素的距离时，说明该片元适合使用当前精度的纹理进行采样。
+完成多级渐进纹理的生成后，下一步是决定什么时候使用哪个级别的纹理进行采样。当屏幕上的相邻片元的UV坐标在要采样的纹理上的坐标的距离小于或等于一个像素的距离时，说明该片元适合使用当前精度的纹理进行采样。预处理的优势之一就是，我们只需要计算出要采样的级数进行采样，而不需要实时地计算范围内像素的均值。
 
 <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap02.png" alt="image-20220506192710706" style="zoom:50%;" />
+
+当然在实际渲染中，我们不可能根据mipmap的级别一级一级地往下试，直到纹理精度符合要求。因此如何快速计算出要采样的mipmap级数很重要，我们需要借助mipmap每一级在每一维上的像素数减半的性质，直接根据原纹理的两个维度的像素数量计算出需要采样几级的mipmap纹理。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap03.png" alt="image-20220507000821699" style="zoom:50%;" />
+
+我们分别计算片元与屏幕空间中两个维度的相邻片元在原纹理上的坐标的距离，并且取其中的较大值，作为片元在原纹理的空间中等值形成的像素矩形的边长的近似。若这个近似的边长值L接近1，说明当前片元在原纹理上就能有比较好的采样效果，若接近4，就能知道当前片元在原纹理经过两次mipmap后能有比较好的采样效果，以此类推。因此，可以直接使用log2计算级数（0级为原纹理）。
+
+然而，在实际编程时，并不像上面这样计算：
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap04.png" alt="image-20220507004848655" style="zoom:80%;" />
+
+对于两个相邻片元的UV坐标，我们并不能提前知道将要采样的纹理的像素精度，同时也不一定只采样一组纹理。因此，往往使用`ddx/ddy`函数计算UV坐标在X方向和Y方向上的偏分，取平方的较大值代入log2计算级数，前面的`0.5`系数的作用为节省了一次平方根的消耗，即 n log<sub>a</sub> b = log<sub>a</sub> b<sup>n</sup>。这里计算出来的`lod`值并不是形象的mipmap级数，等到后面调用`tex2Dlod()`函数时，才会根据`lod`值以及`_MainTex`纹理每个像素的实际大小计算出最终的`lod`级数。
+
+到这里，其实还没有结束，因为我们预计算的mipmap级数都为整数，而我们计算出来的采样的级数却不一定是个整数值。如何根据计算结果确定要采样的mipmap级数呢？
+
+这里需要说明的是，其实mipmap算法并不是一个独立的算法，它需要与上面的算法像是最邻近算法或双线性插值共同产生作用。例如，在采样某级的mipmap时，可以使用最邻近算法取最接近的像素，也可以使用双线性插值计算插值结果。以此类推，对于计算出来的采样级数，我们可以用最邻近算法，采样最邻近的mipmap，当然可以使用插值的方法，对于相邻的两个级数的mipmap的采样结果进行插值，来得到最终的结果。其中，在进行纹理采样时使用双线性插值，同时在mipmap切换间使用插值的方法，又被称为三线性插值。三线性插值得到的应用非常广泛，因为它不仅效果好，消耗也相对来说不是很大。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap05.png" alt="image-20220507013955893" style="zoom:50%;" />
+
+但mipmap还是存在缺陷的，其中之一就是过度模糊（Over Blur）。对比下面两张图片：
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap06.png" alt="image-20220507015611163" style="zoom:50%;" /><img src="C:\Users\52781\AppData\Roaming\Typora\typora-user-images\image-20220507015641128.png" alt="image-20220507015641128" style="zoom: 50%;" />
+
+以上面超采样的结果为基准，可以发现三线性插值的mipmap的结果导致远处的细节完全丢失了。这是因为算法在计算各级mipmap的时候是以正方形来进行处理的，即每下一级的mipmap的像素，都是上一级成正方形的四个像素平均（缩小）后的结果。然而实际情况是，光栅化阶段在屏幕上成一个正方形的四个相邻片元，其在纹理空间所表示的区域却往往不接近正方形，甚至在极端情况下变得十分狭长。这样会导致采样坐标在一个维度上横跨多个像素，在另一个维度上却跨度极小。而mipmap的做法是取最长的跨度，导致很多不该被平均的像素在正方形的范围内，从而导致了过度的模糊。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap07.png" alt="image-20220507015807823" style="zoom:50%;" />
+
+像mipmap这样对每个方向（UV）进行同等对待的思想被称为各向同性（Isotropic），要解决上面的问题，需要考虑的就是对不同的方向进行不同的处理的思想，即各向异性（Anisotropy），`Rimmap`就是一个应用这种思想的方法。它在mipmap的基础上，预计算了很多张不同维度上缩放不同的下级纹理，以此来适应横纵坐标范围差异较大的情况。但是，我们也不能期望这种方法完全解决问题，这种方法在处理横平竖直的矩形范围时效果确实不错，但是当处理像上图那样斜着的区域时，又会导致许多无关的像素被平均。同时，这个算法的开销较大，从下图可以看出，会增加3被的存储空间。但是其效果确实会比mipmap好一些。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap08.png" alt="image-20220507015756619" style="zoom:50%;" />
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap09.png" alt="image-20220507015742417" style="zoom:50%;" />
+
+除此之外，还有各种对mipmap的效果进行升级的算法（EWA filtering， 积分图Summed-Area Table等），但无疑都是以更大的代价作为交换，来得到大多数时候不太明显的提升。
+
+
 
 
 
