TA 100-plan: update: 1.3 texture basis

--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -213,39 +213,52 @@
 
 <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap07.png" alt="image-20220507015807823" style="zoom:50%;" />
 
-像mipmap这样对每个方向（UV）进行同等对待的思想被称为各向同性（Isotropic），要解决上面的问题，需要考虑的就是对不同的方向进行不同的处理的思想，即各向异性（Anisotropy），`Rimmap`就是一个应用这种思想的方法。它在mipmap的基础上，预计算了很多张不同维度上缩放不同的下级纹理，以此来适应横纵坐标范围差异较大的情况。但是，我们也不能期望这种方法完全解决问题，这种方法在处理横平竖直的矩形范围时效果确实不错，但是当处理像上图那样斜着的区域时，又会导致许多无关的像素被平均。同时，这个算法的开销较大，从下图可以看出，会增加3被的存储空间。但是其效果确实会比mipmap好一些。
+像mipmap这样对每个方向（UV）进行同等对待的思想被称为各向同性（Isotropic），要解决上面的问题，需要考虑的就是对不同的方向进行不同的处理的思想，即各向异性（Anisotropy），`Rimmap`就是一个应用这种思想的方法。它在mipmap的基础上，预计算了很多张不同维度上缩放不同的下级纹理，以此来适应横纵坐标范围差异较大的情况。但是，我们也不能期望这种方法完全解决问题，这种方法在处理横平竖直的矩形范围时效果确实不错，但是当处理像上图那样斜着的区域时，又会导致许多无关的像素被平均。同时，这个算法的开销较大，从下图可以看出，会增加3倍的存储空间。但是其效果确实会比mipmap好一些。
 
 <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap08.png" alt="image-20220507015756619" style="zoom:50%;" />
 
 <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap09.png" alt="image-20220507015742417" style="zoom:50%;" />
 
-除此之外，还有各种对mipmap的效果进行升级的算法（EWA filtering， 积分图Summed-Area Table等），但无疑都是以更大的代价作为交换，来得到大多数时候不太明显的提升。
+然而，目前在各大主流引擎（Unity、Unreal）中开启各向异性过滤之后，其纹理占用的空间并不会增加3倍之多，而是类似mipmap的1/3，这说明其使用的不是`ripmap`方法，而是其他基于各向异性过滤的方法。一方面，`ripmap`方法额外3倍的存储空间过于昂贵，在大型项目中这种代价无法接受。另一方面，现代的图形硬件针对`mipmap`方法进行了硬件层面的加速。因此，当前的主流做法是在mipmap的基础上进行改进。我们将当前片元在屏幕空间中的区域投影到纹理空间中，得到一个四边形，然后将四边形的最短边作为mipmap等级的依据（传统的mipmap使用的是最长边）。然后，我们沿着较长的边创建一条各向异性线，穿过四边形的中心，根据这条边相对于短边的长度决定采样的次数，在对应级数的mipmap上进行采样，混合得到最终的结果。
 
+这种方法相对于`ripmap`，大幅节省了空间，同时享受到了mipmap带来的硬件加速，且能够适配**各种方向**的不规则四边形，但代价是多次的采样计算消耗，且各向异性的程度越高，采样的次数越多。
 
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap10.png" alt="image-20220507231910867" style="zoom:50%;" />
 
-
-
-现代的计算机已经能够在硬件级别上完成纹理的过滤操作，当然也可以通过软件或者软硬件同时处理来完成。
-
-
-
-
-
-
-
-
+除此之外，还有各种对mipmap的效果进行升级的算法（EWA filtering， 积分图Summed-Area Table等），但无疑都是以更大的代价作为交换，来获取大多数时候不太明显的提升。现代的计算机已经能够在硬件级别上完成纹理的过滤操作，当然也可以通过软件或者软硬件同时处理来完成。
 
 
 
 ## 优化与纹理应用
 
+### 一些概念
+
+* 命令缓存区：一个队列，CPU不断往里面加入命令，GPU不断从里面取出命令来执行
+* `DrawCall`：一个命令，当CPU准备好一次渲染需要的所用东西（网格、纹理等），并完成了渲染前的各种设置，就会向GPU发送这个命令，命令GPU渲染这个物体
+
+### 优化
+
+#### 纹理图集、纹理数组
+
+若需要渲染大量的模型，而这些模型的区别只是纹理不同。这样，当进行渲染时，CPU需要不断重复地改变发送到GPU的纹理，然后调用一次`DrawCall`命令GPU渲染这个模型。 这样的话，CPU会将大量的时间花在提交`DrawCall`上，而GPU的处理速度一般来说远高于CPU的处理速度，因而会发生CPU忙碌、GPU空闲的现象。
+
+纹理图集、纹理数组这一类优化方法的思路就是将一堆小纹理合成一个大纹理，这样CPU就不需要频繁的发送纹理，且调用一次`DrawCall`就可以命令GPU渲染多个模型。
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\texture_atlas.png" alt="image-20220508004248640" style="zoom:50%;" />
+
+#### 纹理压缩
+
+纹理的精度越高，传输的速度也就越慢，一个常见的优化方式就是进行纹理压缩。这个方法可以减少包体的大小，减轻带宽和计算的压力，提高内存的使用效率等。
 
 
 
+### 纹理应用
 
+* 立方体贴图（Cube Map）：使用三维纹理对立方体映射（六张纹理）进行采样，通常用来模拟天空盒等环境光照
+* 凹凸贴图（Bump Map）/法线贴图（Normal Map）：根据纹理信息像素级地改变物体表面的法线信息，可以极大地丰富表面的细节，但实际上物体的表面在几何上还是平的，没有真实的增加或移动顶点。这导致在某些时候会出现artifacts，如阴影
+* 位移贴图（Displacement Map）：与法线贴图相比，位移贴图通过真正地移动顶点来增加表面的细节，因此其阴影的表现依旧是正确的。然而，位移贴图的局限性在于它只能移动顶点，并不能生成顶点。只有当模型原本的顶点数量很大时（大于或等于纹理信号频率），位移贴图才能起到较好的效果。因此，通常伴随着使用可选的曲面细分着色器生成更多顶点（DirectX的新特性就包含动态的曲面细分）
 
-
-
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\application.png" alt="image-20220508011005083" style="zoom:50%;" />
 
 ## 参考链接
 
@@ -253,6 +266,8 @@
 * https://zhuanlan.zhihu.com/p/365518995
 * http://www.javashuo.com/article/p-vilijzko-dx.html
 * https://blog.csdn.net/lele0503/article/details/105881309
+* https://zhuanlan.zhihu.com/p/394136111
+* https://zhuanlan.zhihu.com/p/357761764
 
 
 
