--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -23,7 +23,7 @@
 
 ## 纹理管线
 
-![image-20220504213831654](C:\Users\52781\AppData\Roaming\Typora\typora-user-images\image-20220504213831654.png "texture_pipeline")
+![image-20220504213831654](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/texture_pipeline.png?raw=true "texture_pipeline")
 
 ### 投影函数（projector function）
 
@@ -41,7 +41,7 @@
 
   * 统一的投影表达式，如球形投影，平面投影等，更多是作为手动进行UV展开前的第一步。先将所有顶点进行统一的投影，再根据实际情况调整顶点的UV坐标进行手动展开
 
-    <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\projector funtion.png" alt="image-20220504224850196" style="zoom:50%;" />
+    <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/projector%20funtion.png?raw=true" alt="image-20220504224850196" style="zoom:50%;" />
 
 * 此外，一些技术还会应用到特殊的投影函数，这种映射不是在**建模时期**确定的，而是在**渲染阶段**进行实时计算的。例如天空盒（Cube map）、IBL（image based lighting）等。这种情况下使用的纹理贴图并不针对某个模型，对场景中的所有模型都具有适用性
 
@@ -86,7 +86,7 @@
 
 #### 采样设置
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\sampling.png" alt="image-20220504234022607" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/sampling.png?raw=true" alt="image-20220504234022607" style="zoom:50%;" />
 
 * 当使用最终的纹理坐标对纹理进行采样时，根据纹理的分辨率，将纹理坐标进行缩放（如纹理分辨率为256x256，就将纹理坐标的两个分量都乘256），然后进行采样
 * 这里会发现，采样的坐标是一个浮点值，而纹理的像素索引值时是整数值。因此我们需要一个具体的采样设置（采样策略）来告诉GPU如何进行采样，即根据这个浮点坐标计算出一个确定的采样值
@@ -108,7 +108,7 @@
 
 其效果依次可以由下面的示例直观地表现：
 
-![image-20220505000400091](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\wrap.png)
+![image-20220505000400091](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/wrap.png?raw=true)
 
 
 
@@ -131,7 +131,7 @@
 
   * 不做任何额外操作，就取离纹理坐标最近的像素，即纹理坐标落在的像素内
 
-    <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\nearest.png" alt="image-20220506022818561" style="zoom:50%;" />
+    <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/nearest.png?raw=true" alt="image-20220506022818561" style="zoom:50%;" />
 
 * 双线性插值（Bilinear）
 
@@ -143,7 +143,7 @@
 
   * 计算像素的混合值作为采样结果
 
-    <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\bilinear.png" alt="image-20220506023215808" style="zoom:50%;" />
+    <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/bilinear.png?raw=true" alt="image-20220506023215808" style="zoom:50%;" />
 
 * 双立方插值（Bicubic）
 
@@ -155,17 +155,17 @@
 
   * 计算像素的混合值作为采样结果
 
-    <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\bicubic.png" alt="image-20220506024648111" style="zoom:50%;" />
+    <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/bicubic.png?raw=true" alt="image-20220506024648111" style="zoom:50%;" />
 
 * 除此之外，还有很多种插值算法。例如上面的双线性插值，也可以不使用线性插值，而是使用一段光滑的曲线函数来代替线性进行插值，如：
 
-  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\smooth.png" alt="image-20220506025200345" style="zoom:50%;" />
+  <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/smooth.png?raw=true" alt="image-20220506025200345" style="zoom:50%;" />
 
 * ……
 
 几种算法的效果对比：
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\contrast.png" alt="image-20220506025926921" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/contrast.png?raw=true" alt="image-20220506025926921" style="zoom:50%;" />
 
 实际上双线性插值已经在大部分场景够用。
 
@@ -179,23 +179,23 @@
 
 解决纹理信息因频率过高而发生信息丢失的一个经典方法就是多级渐进纹理（mipmap），它通过预计算为一张纹理生成多张不同级别的精细程度（逐层减半）的纹理，以此降低纹理信息频率。因此，以原始纹理为顶层，每下面一层是上一层的1/4大小，直到最后一层。最终，生成mipmap的纹理仅比不生成mipmap的纹理多出原纹理近1/3大小的存储。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap.png" alt="image-20220506035549390" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap.png?raw=true" alt="image-20220506035549390" style="zoom:50%;" />
 
 
 
 完成多级渐进纹理的生成后，下一步是决定什么时候使用哪个级别的纹理进行采样。当屏幕上的相邻片元的UV坐标在要采样的纹理上的坐标的距离小于或等于一个像素的距离时，说明该片元适合使用当前精度的纹理进行采样。预处理的优势之一就是，我们只需要计算出要采样的级数进行采样，而不需要实时地计算范围内像素的均值。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap02.png" alt="image-20220506192710706" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap02.png?raw=true" alt="image-20220506192710706" style="zoom:50%;" />
 
 当然在实际渲染中，我们不可能根据mipmap的级别一级一级地往下试，直到纹理精度符合要求。因此如何快速计算出要采样的mipmap级数很重要，我们需要借助mipmap每一级在每一维上的像素数减半的性质，直接根据原纹理的两个维度的像素数量计算出需要采样几级的mipmap纹理。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap03.png" alt="image-20220507000821699" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap03.png?raw=true" alt="image-20220507000821699" style="zoom:50%;" />
 
 我们分别计算片元与屏幕空间中两个维度的相邻片元在原纹理上的坐标的距离，并且取其中的较大值，作为片元在原纹理的空间中等值形成的像素矩形的边长的近似。若这个近似的边长值L接近1，说明当前片元在原纹理上就能有比较好的采样效果，若接近4，就能知道当前片元在原纹理经过两次mipmap后能有比较好的采样效果，以此类推。因此，可以直接使用log2计算级数（0级为原纹理）。
 
 然而，在实际编程时，并不像上面这样计算：
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap04.png" alt="image-20220507004848655" style="zoom:80%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap04.png?raw=true" alt="image-20220507004848655" style="zoom:80%;" />
 
 对于两个相邻片元的UV坐标，我们并不能提前知道将要采样的纹理的像素精度，同时也不一定只采样一组纹理。因此，往往使用`ddx/ddy`函数计算UV坐标在X方向和Y方向上的偏分，取平方的较大值代入log2计算级数，前面的`0.5`系数的作用为节省了一次平方根的消耗，即 n log<sub>a</sub> b = log<sub>a</sub> b<sup>n</sup>。这里计算出来的`lod`值并不是形象的mipmap级数，等到后面调用`tex2Dlod()`函数时，才会根据`lod`值以及`_MainTex`纹理每个像素的实际大小计算出最终的`lod`级数。
 
@@ -203,27 +203,27 @@
 
 这里需要说明的是，其实mipmap算法并不是一个独立的算法，它需要与上面的算法像是最邻近算法或双线性插值共同产生作用。例如，在采样某级的mipmap时，可以使用最邻近算法取最接近的像素，也可以使用双线性插值计算插值结果。以此类推，对于计算出来的采样级数，我们可以用最邻近算法，采样最邻近的mipmap，当然可以使用插值的方法，对于相邻的两个级数的mipmap的采样结果进行插值，来得到最终的结果。其中，在进行纹理采样时使用双线性插值，同时在mipmap切换间使用插值的方法，又被称为三线性插值。三线性插值得到的应用非常广泛，因为它不仅效果好，消耗也相对来说不是很大。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap05.png" alt="image-20220507013955893" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap05.png?raw=true" alt="image-20220507013955893" style="zoom:50%;" />
 
 但mipmap还是存在缺陷的，其中之一就是过度模糊（Over Blur）。对比下面两张图片：
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap06.png" alt="image-20220507015611163" style="zoom:50%;" /><img src="C:\Users\52781\AppData\Roaming\Typora\typora-user-images\image-20220507015641128.png" alt="image-20220507015641128" style="zoom: 50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap06.png?raw=true" alt="image-20220507015611163" style="zoom:50%;" /><img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap0602.png?raw=true" alt="image-20220507015641128" style="zoom: 50%;" />
 
 以上面超采样的结果为基准，可以发现三线性插值的mipmap的结果导致远处的细节完全丢失了。这是因为算法在计算各级mipmap的时候是以正方形来进行处理的，即每下一级的mipmap的像素，都是上一级成正方形的四个像素平均（缩小）后的结果。然而实际情况是，光栅化阶段在屏幕上成一个正方形的四个相邻片元，其在纹理空间所表示的区域却往往不接近正方形，甚至在极端情况下变得十分狭长。这样会导致采样坐标在一个维度上横跨多个像素，在另一个维度上却跨度极小。而mipmap的做法是取最长的跨度，导致很多不该被平均的像素在正方形的范围内，从而导致了过度的模糊。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap07.png" alt="image-20220507015807823" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap07.png?raw=true" alt="image-20220507015807823" style="zoom:50%;" />
 
 像mipmap这样对每个方向（UV）进行同等对待的思想被称为各向同性（Isotropic），要解决上面的问题，需要考虑的就是对不同的方向进行不同的处理的思想，即各向异性（Anisotropy），`Rimmap`就是一个应用这种思想的方法。它在mipmap的基础上，预计算了很多张不同维度上缩放不同的下级纹理，以此来适应横纵坐标范围差异较大的情况。但是，我们也不能期望这种方法完全解决问题，这种方法在处理横平竖直的矩形范围时效果确实不错，但是当处理像上图那样斜着的区域时，又会导致许多无关的像素被平均。同时，这个算法的开销较大，从下图可以看出，会增加3倍的存储空间。但是其效果确实会比mipmap好一些。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap08.png" alt="image-20220507015756619" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap08.png?raw=true" alt="image-20220507015756619" style="zoom:50%;" />
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap09.png" alt="image-20220507015742417" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap09.png?raw=true" alt="image-20220507015742417" style="zoom:50%;" />
 
 然而，目前在各大主流引擎（Unity、Unreal）中开启各向异性过滤之后，其纹理占用的空间并不会增加3倍之多，而是类似mipmap的1/3，这说明其使用的不是`ripmap`方法，而是其他基于各向异性过滤的方法。一方面，`ripmap`方法额外3倍的存储空间过于昂贵，在大型项目中这种代价无法接受。另一方面，现代的图形硬件针对`mipmap`方法进行了硬件层面的加速。因此，当前的主流做法是在mipmap的基础上进行改进。我们将当前片元在屏幕空间中的区域投影到纹理空间中，得到一个四边形，然后将四边形的最短边作为mipmap等级的依据（传统的mipmap使用的是最长边）。然后，我们沿着较长的边创建一条各向异性线，穿过四边形的中心，根据这条边相对于短边的长度决定采样的次数，在对应级数的mipmap上进行采样，混合得到最终的结果。
 
 这种方法相对于`ripmap`，大幅节省了空间，同时享受到了mipmap带来的硬件加速，且能够适配**各种方向**的不规则四边形，但代价是多次的采样计算消耗，且各向异性的程度越高，采样的次数越多。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\mipmap10.png" alt="image-20220507231910867" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/mipmap10.png?raw=true" alt="image-20220507231910867" style="zoom:50%;" />
 
 除此之外，还有各种对mipmap的效果进行升级的算法（EWA filtering， 积分图Summed-Area Table等），但无疑都是以更大的代价作为交换，来获取大多数时候不太明显的提升。现代的计算机已经能够在硬件级别上完成纹理的过滤操作，当然也可以通过软件或者软硬件同时处理来完成。
 
@@ -244,7 +244,7 @@
 
 纹理图集、纹理数组这一类优化方法的思路就是将一堆小纹理合成一个大纹理，这样CPU就不需要频繁的发送纹理，且调用一次`DrawCall`就可以命令GPU渲染多个模型。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\texture_atlas.png" alt="image-20220508004248640" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/texture_atlas.png?raw=true" alt="image-20220508004248640" style="zoom:50%;" />
 
 #### 纹理压缩
 
@@ -258,7 +258,7 @@
 * 凹凸贴图（Bump Map）/法线贴图（Normal Map）：根据纹理信息像素级地改变物体表面的法线信息，可以极大地丰富表面的细节，但实际上物体的表面在几何上还是平的，没有真实的增加或移动顶点。这导致在某些时候会出现artifacts，如阴影
 * 位移贴图（Displacement Map）：与法线贴图相比，位移贴图通过真正地移动顶点来增加表面的细节，因此其阴影的表现依旧是正确的。然而，位移贴图的局限性在于它只能移动顶点，并不能生成顶点。只有当模型原本的顶点数量很大时（大于或等于纹理信号频率），位移贴图才能起到较好的效果。因此，通常伴随着使用可选的曲面细分着色器生成更多顶点（DirectX的新特性就包含动态的曲面细分）
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.3 图形-纹理基础\application.png" alt="image-20220508011005083" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.3%20%E5%9B%BE%E5%BD%A2-%E7%BA%B9%E7%90%86%E5%9F%BA%E7%A1%80/application.png?raw=true" alt="image-20220508011005083" style="zoom:50%;" />
 
 ## 参考链接
 
