TA 100-plan: update: 1.3 texture basis add games101 lec09 link

--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -227,6 +227,8 @@
 
 除此之外，还有各种对mipmap的效果进行升级的算法（EWA filtering， 积分图Summed-Area Table等），但无疑都是以更大的代价作为交换，来获取大多数时候不太明显的提升。现代的计算机已经能够在硬件级别上完成纹理的过滤操作，当然也可以通过软件或者软硬件同时处理来完成。
 
+关于纹理的过滤操作，Games101 Lecture 09 作了非常精彩的讲解，建议观看：https://www.bilibili.com/video/BV1X7411F744?p=9
+
 
 
 ## 优化与纹理应用
