TA 100-plan: update: 1.4 API basis update picture link

--- a/TA 100-plan Frostwolf_may/1.4 图形-主流平台API介绍.md
+++ b/TA 100-plan Frostwolf_may/1.4 图形-主流平台API介绍.md
@@ -29,9 +29,9 @@
 
 OpenGL的发展过程中，从1.0开始有一个分支，一个是OpenGL ES1.1 ，一个是 OpenGL 2.0，最后统一到了 OpenGL ES 2.0，再继续往后发展。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.4 主流平台API介绍\opengl_development.png" alt="image-20220509003344294" style="zoom: 70%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.4%20%E4%B8%BB%E6%B5%81%E5%B9%B3%E5%8F%B0API%E4%BB%8B%E7%BB%8D/opengl_development.png?raw=true" alt="image-20220509003344294" style="zoom: 70%;" />
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\1.4 主流平台API介绍\opengl_development02.png" alt="image-20220509003724069" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/1.4%20%E4%B8%BB%E6%B5%81%E5%B9%B3%E5%8F%B0API%E4%BB%8B%E7%BB%8D/opengl_development02.png?raw=true" alt="image-20220509003724069" style="zoom:50%;" />
 
 上面是视频内容，我个人不太同意。OpenGL ES（OpenGL for Embedded Systems）应该算是 OpenGL 的子集，针对手机、PDA和游戏主机等嵌入式设备而设计，各显卡制造商和系统制造商来实现这组 API。因此，两者并没有在2.0版本之后统一发展，后面有各自发展的新版本，关于两者的版本历史，可以参考：https://blog.csdn.net/u011310383/article/details/115702383
 
