TA 100-plan: update: 2.1 color space basis part

--- a/TA 100-plan Frostwolf_may/2.1 图形-色彩空间基础.md
+++ b/TA 100-plan Frostwolf_may/2.1 图形-色彩空间基础.md
@@ -40,48 +40,162 @@
   * 光线在物体表面经过散射后，有两种方向：
     * 折射（refraction）/透射（transmission）
       * 光线散射入物体的内部
-      *  
+      * 折射方向与光的波长以及折射入的材质都有关系
+        * 光在不同介质中的传播速度不同。两个介质相比，光在其中传播速度快的介质被称为光疏介质，传播慢的被称为光密介质
+        * 光线从光疏介质射入光密介质，折射角小于入射角。反之则折射角大于入射角
+        * 不同波长的光线，其从同一个方向射入同一个介质时，其折射角也不相同（这也解释了为什么会出现彩虹现象（光的色散））
+        * 具体的计算公式，由于本节主题是色彩空间，不在这里进行描述
       * 折射入物体内部的光线还会继续与物体内部（实心的话）的颗粒进行相交，从而发生各种吸收和散射现象。最终，光线可能被物体完全吸收，或者只被吸收了一部分，未被吸收光线从物体表面射出。此时的光线会由于在物体内的各种作用而表现出与入射光线不同的方向和颜色
     * 反射（reflection）
       * 光线散射到物体的外部
-      * 
+      * 反射时的反射角与入射角相同
+
+![img](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\03-reflection&refraction.png)
+
+**本节大部分实际上是高中内容，为了内容的完整性予以保留**
+
+
 
 
 
 ## 色彩接收者
 
+### 相对亮度感知
+
+人类对亮度的感知并不是线性的。举个例子，物理上2倍的亮度提升，并不会使我们感受到光线强度提升了2倍。物理亮度越高，我们就越无法感受亮度增加的幅度。相反，人类在较暗的情况下对亮度感知极其敏感。例如，从0.1到0.5的亮度变化和从10.1到10.5的亮度变化，从数值来说都是提高了0.4，而对人类来说前者的变化感受远比后者的变化感受大。
 
 
 
+### 人眼动态范围
+
+人眼的动态调整范围很大。当光线较强时，人眼的瞳孔会缩小，从而减少进光量，以此看清高光中的细节。当光线较弱时，人眼的瞳孔又会缩小，从而增大进光量，借此看清暗部的细节。镜头中的光圈也是这个道理。
+
+如上所述，人眼的动态范围很大，可以根据场景的实际情况进行调整。但是，当场景中既有亮部也有暗部，人眼就无法同时捕捉到二者的细节，就像你在烈日下很难看清前面的景物，必须伸手挡住太阳光以次促使瞳孔进行调节，看到较暗地方的景物。
 
 
 
-## 色彩空间历史
+### 人眼感光细胞分布
+
+* 杆状细胞：对亮度敏感
+* 锥状细胞：对色彩敏感
 
 
 
+## 色彩空间发展
 
+历史部分并非知识点，感兴趣的可以观看视频
+
+### 色域马蹄图
+
+![image-20220511023737699](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\04-color-graph.png)
+
+加上亮度作为一维：
+
+![img](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\05-color-graph.gif)
+
+上述XYZ色彩空间的二维图是通过科学计算并处理过的经典色彩空间，因为由XY可以确定Z，所以只有二维。该色彩空间也并不完美，例如绿色部分颜色变化缓慢，而蓝色部分颜色变化迅速，色彩的分布不是很均匀。
+
+
+
+## 色彩空间的定义
+
+我们可以基于XYZ色彩空间来定义自己的色彩空间。
+
+### 定义要素
+
+* 色域：一般指定色彩图中三个点作为基点（方便简单，也可以以其他方式，比如HSV模型），表示三个原色。三点形成一个三角形，其囊括的范围就是定义的色彩空间所囊括的色彩范围，即色域
+
+  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\06-color-gamut.png" alt="image-20220511025754359" style="zoom:50%;" />
+
+* 白点：表示色域三角形的中心
+
+  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\07-white-point.png" alt="image-20220511025901491" style="zoom:50%;" />
+
+* Gamma：定义对色域内的点进行采样时的校准值，表现为在采样坐标基础上进行指数修正，再进行采样，即 
+
+  f (A<sup>gamma</sup>, B<sup>gamma</sup>， C<sup>gamma</sup>) = Color，gamma = 1 时即为线性采样（Linear）
+
+  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\08-color-gamma.png" alt="image-20220511030031577" style="zoom:50%;" />
+
+### 举例：sRGB
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\09-color-srgb.png" alt="image.png" style="zoom: 67%;" />
+
+* 色域：sRGB 首先设定了 RGB 三个基色的坐标
+* 白点：sRGB 也规定了白点位置
+* Gamma：sRGB 的 Gamma 设定为 ≈ 2.2 也就是说，从外而向内切，先切的很细，然后逐渐变粗
 
 
 
 ## 常用色彩空间、色彩模型
 
+### 色彩模型
+
+使用一定规则描述（排列）颜色的方法。
+
+* RGB：面向诸如视频监视器，彩色摄像机或打印机之类的硬件设备。面向硬件设备最常用；RGB模型用三维空间中的一个点来表示一种颜色。每个点有三个分量，分别代表该点颜色的红（Red）、绿（Green）、蓝（Blue）亮度值，亮度值限定在[0,1]
+* HSV：对应于画家配色的方法。H表示色相（Hue），S表示饱和度（Saturation），V表示明度（Value）
+* HSI/HLS：以彩色处理为目的的应用，如动画中彩色图形，面向彩色处理最常用；H表示色相（Hue），S表示饱和度（Saturation），I表示亮度（Intensity）。HLS意义相同，只不过其中L表示亮度（Luminance、Lightness）。该模型与HSV模型的区别在于，HSV模型在 S = 0， V = 1时表示纯白色，而HSI模型仅在 I = 1时就可以表示纯白色，比前者更明确
+* CMYK：常用于印刷工业和电视信号传输,CMYK模式的原色为青色(Cyan)、品红色(Magenta)、黄色(Yellow)和黑色（Black)
+
+### 色彩空间
+
+需要至少满足三个指标：色域、白点、Gamma。
+
+* CIE XYZ
+* Adobe RGB
+* sRGB
+* JapanColor 2001 Uncoated（基于 CMYK 模型建立）
+* US web Coated（基于 CMYK 模型建立）
+
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\10-color-space.png" alt="image-20220511033935263" style="zoom:50%;" />
 
 
 
 
 
+## 色彩模型转换
 
-## 色彩空间转换
+<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\11-color-model-transform.png" alt="image-20220511034250861" style="zoom:50%;" />
 
-
-
-
-
+按照前面的讲解，这部分应该是色彩模型的转换，视频中错误地当做了色彩空间的转换
 
 
-## 总结
 
+## 补充
+
+* 常说的Gamma空间和线性空间其实并不是一个确定的色彩空间，而是指一个色彩空间在Gamma = 2.2和Gamma = 1 的情况下的采样差异
+
+* sRGB色彩空间定义Gamma值为2.2，是因为早期的显示器CRT（阴极射线管）输入的电压与输出的颜色并不是成正比，即不是线性关系。实际上，恰恰符合 Gamma = 2.2 时的输入输出关系。只不过那时并不是人为定义的，而是设备的物理特性决定的。而现代的显示设备理论上是可以做到线性的输入输出的，而人们由于观看习惯一般上还是会将显示器的Gamma值调整为2.2。因此，一些色彩空间将其Gamma值设置为2.2也有其意义所在
+
+* 2.2 的Gamma值虽然是人们习惯下的产物，但在该Gamma值下的色彩空间的采样并不是线性的。当我们进行一般的计算时，这种差别或许不易被注意到（只要看起来对那么就是对的）
+
+  * 举个例子，计算经典sRGB色彩空间下两个颜色值$(0.1,0,0)$与$(0.2,0,0)$的和
+
+    * 很显然，计算的结果是$(0.3,0,0)$
+
+    * 而在Gamma = 2.2的情况下，其实际上映射到的具体颜色坐标之间并不是线性的。即：
+
+      $(0.1^{2.2},0,0)+(0.2^{2.2},0,0)\neq(0.3^{2.2},0,0)$
+
+      当然，我们也无法通过肉眼判断两个颜色相加的结果是否正确，说到底色域马蹄图也是人为定义的结果
+
+  * 但是，当我们进行比较严谨的如物理相关的计算时（如PBR），这种Gamma导致的非线性关系将导致计算数据上的错误。
+
+* 因此，当进行类似物理的精确计算时，我们需要将颜色的采样转换为线性（Unity中的说法是从Gamma空间转换为线性空间）
+
+  * 还是以上面的经典sRGB色彩空间下两个颜色值$(0.1,0,0)$与$(0.2,0,0)$为例
+    * 首先，对颜色值进行一次人为的Gamma转换，即
+      * $(0.1,0,0)\Rightarrow(0.1^{2.2},0,0)$
+      * $(0.2,0,0)\Rightarrow(0.2^{2.2},0,0)$
+
+    * 此时，颜色值的坐标都被转换到了在Gamma=2.2时真正采样的坐标下，此时计算的结果才是当前Gamma值下的正确结果（真正采样坐标），例如计算两种颜色之和
+      * $(0.1^{2.2},0,0)+(0.2^{2.2},0,0)=(0.1^{2.2}+0.2^{2.2},0,0)$
+
+    * 在计算出最终的结果之后，我们还需要进行一次逆变换，将计算结果变换到应用Gamma之前的坐标值，因为sRGB色彩模式下的显示器在输出时会应用2.2的Gamma值
+      * $((0.1^{2.2}+0.2^{2.2})^{\frac{1}{2.2}},0,0)$
+
+  * 像上面这样在计算时将Gamma空间转换到线性空间，再在计算出结果后，从线性空间转换回Gamma空间的操作，被称为Gamma校正（这里进行简要介绍，以后应该会有详解）
 
 
 
@@ -92,3 +206,12 @@
 
 * https://www.yuque.com/u12120868/md8ze7/dyv458
 * 《Unity Shader 入门精要》 冯乐乐
+* http://www.myliushu.com/2913.html
+* https://iask.sina.com.cn/b/D5IFozA1tO.html
+* https://m.idongde.com/q/E0cA9c4d91be4306.shtml
+* http://www.gaosan.com/gaokao/280724.html
+* https://baike.baidu.com/item/%E5%8F%8D%E5%B0%84%E4%B8%8E%E6%8A%98%E5%B0%84/6327895?fr=aladdin
+* https://baijiahao.baidu.com/s?id=1667718554544272708&wfr=spider&for=pc
+* https://zhidao.baidu.com/question/881272024573816932.html
+* https://www.yuque.com/u12120868/md8ze7/dyv458
+* https://zhuanlan.zhihu.com/p/67930839
