TA 100-plan: update: 2.1 color space basis update picture link

--- a/TA 100-plan Frostwolf_may/2.1 图形-色彩空间基础.md
+++ b/TA 100-plan Frostwolf_may/2.1 图形-色彩空间基础.md
@@ -14,7 +14,7 @@
 
 波长（wavelength）是指波在一个振动周期内传播的距离，是一个物理概念。反映在光源上，我们可以根据波长来区别不同的电磁波。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\01-wavelength.png" alt="image-20220510011038952" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/01-wavelength.png?raw=true" alt="image-20220510014006388" style="zoom:50%;" />
 
 我们人类所能够感知到颜色的电磁波波长范围，大概是400纳米左右到700纳米左右，高于红光波长的被称为红外线，低于紫光波长的被称为紫外线，两者之间的就是人类的可见光范围。
 
@@ -24,7 +24,7 @@
 
 上面彩虹的例子是自然现象，我们可以使用分光光度计这个仪器来人为地分离太阳光。
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\02-Spectrophotometer.png" alt="image-20220510014006388" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/02-Spectrophotometer.png?raw=true" style="zoom:50%;" />
 
 而关于上图以及视频中各种色光能量的分布的说法，我认为并不正确，或者说是不准确。但由于我个人对光学也是一知半解，就不写出来误人子弟了，只是保留自己的观点。同时这部分的重要性其实不高，不必纠结。
 
@@ -50,7 +50,7 @@
       * 光线散射到物体的外部
       * 反射时的反射角与入射角相同
 
-![img](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\03-reflection&refraction.png)
+![img](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/03-reflection&refraction.png?raw=true)
 
 **本节大部分实际上是高中内容，为了内容的完整性予以保留**
 
@@ -87,11 +87,11 @@
 
 ### 色域马蹄图
 
-![image-20220511023737699](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\04-color-graph.png)
+![image-20220511023737699](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/04-color-graph.png?raw=true)
 
 加上亮度作为一维：
 
-![img](E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\05-color-graph.gif)
+![img](https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/05-color-graph.gif?raw=true)
 
 上述XYZ色彩空间的二维图是通过科学计算并处理过的经典色彩空间，因为由XY可以确定Z，所以只有二维。该色彩空间也并不完美，例如绿色部分颜色变化缓慢，而蓝色部分颜色变化迅速，色彩的分布不是很均匀。
 
@@ -105,21 +105,21 @@
 
 * 色域：一般指定色彩图中三个点作为基点（方便简单，也可以以其他方式，比如HSV模型），表示三个原色。三点形成一个三角形，其囊括的范围就是定义的色彩空间所囊括的色彩范围，即色域
 
-  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\06-color-gamut.png" alt="image-20220511025754359" style="zoom:50%;" />
+  <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/06-color-gamut.png?raw=true" style="zoom:50%;" />
 
 * 白点：表示色域三角形的中心
 
-  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\07-white-point.png" alt="image-20220511025901491" style="zoom:50%;" />
+  <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/07-white-point.png?raw=true" style="zoom:50%;" />
 
 * Gamma：定义对色域内的点进行采样时的校准值，表现为在采样坐标基础上进行指数修正，再进行采样，即 
 
   f (A<sup>gamma</sup>, B<sup>gamma</sup>， C<sup>gamma</sup>) = Color，gamma = 1 时即为线性采样（Linear）
 
-  <img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\08-color-gamma.png" alt="image-20220511030031577" style="zoom:50%;" />
+  <img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/08-color-gamma.png?raw=true" style="zoom:50%;" />
 
 ### 举例：sRGB
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\09-color-srgb.png" alt="image.png" style="zoom: 67%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/09-color-srgb.png?raw=true" style="zoom: 67%;" />
 
 * 色域：sRGB 首先设定了 RGB 三个基色的坐标
 * 白点：sRGB 也规定了白点位置
@@ -148,7 +148,7 @@
 * JapanColor 2001 Uncoated（基于 CMYK 模型建立）
 * US web Coated（基于 CMYK 模型建立）
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\10-color-space.png" alt="image-20220511033935263" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/10-color-space.png?raw=true" alt="image-20220511033935263" style="zoom:50%;" />
 
 
 
@@ -156,7 +156,7 @@
 
 ## 色彩模型转换
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\My-Learn\TA 100-plan Frostwolf_may\2.1 色彩空间基础\11-color-model-transform.png" alt="image-20220511034250861" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/My-Learn/TA%20100-plan%20Frostwolf_may/2.1%20%E8%89%B2%E5%BD%A9%E7%A9%BA%E9%97%B4%E5%9F%BA%E7%A1%80/11-color-model-transform.png?raw=true" alt="image-20220511034250861" style="zoom:50%;" />
 
 按照前面的讲解，这部分应该是色彩模型的转换，视频中错误地当做了色彩空间的转换
 
