--- a/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
+++ b/TA 100-plan Frostwolf_may/1.3 图形-纹理基础.md
@@ -119,7 +119,7 @@
 * 要渲染的物体占据屏幕的很大部分，但纹理的精度却不高。这时候会发生许多片元计算后的纹理坐标落在纹理的同一个像素的坐标范围内的情况，即多个片元都采到了同一个像素点的范围
 * 要渲染的物体占据屏幕的很小部分，但纹理的精度却很高。这时候会发生原本相邻片元计算后的纹理坐标落在的纹理的像素的坐标之间隔了很多的像素，即每个片元的采样坐标在纹理上距离很远
 
-上面的的两种现象都可以成为走样。可以看到，无论纹理的精度较高还是精度较低，如果只是简单地采样纹理坐标所在的像素，都会存在走样的问题：前者产生锯齿状，后者丢失了很多纹理信息，且伴随闪烁现象。
+上面的两种现象都可以成为走样。可以看到，无论纹理的精度较高还是精度较低，如果只是简单地采样纹理坐标所在的像素，都会存在走样的问题：前者产生锯齿状，后者丢失了很多纹理信息，且伴随闪烁现象。
 
 物体在画面中的比例，以及屏幕的精度等因素，都是没办法完全控制的。因此，我们对导入的纹理对象要设置其过滤模式，以决定它在实际的渲染中被挤压或者拉伸时，采用哪一种滤波模式来进行采样，使得采样的效果得到控制（获得自己想要的效果）。此外，我们可以对纹理在放大（导致精度不够）和缩小（导致精度过高）的情况下分别应用不同的过滤模式。下面进行分别介绍：
 
@@ -175,7 +175,7 @@
 
 放大情况下的一些算法同样可以应用在缩小的情况下，如**最邻近算法**和**双线性插值**等。
 
-上面讲过，缩小情况下的主要问题就是纹理信息的丢失，相邻片元的纹理坐标在纹理上采样时相隔很多个像素，即纹理的信号频率远远大于采样频率。这种情况下，双线性插值能够一定程度上缓解这个问题（有限地增加了采样频率），因为其取的是2x2的像素范围，但是当情况更严重时，纹理的信息依旧会丢失。
+上面讲过，缩小情况下的主要问题就是纹理信息的丢失，相邻片元间的纹理坐标在纹理上采样时相隔很多个像素，即纹理的信号频率远远大于采样频率。这种情况下，双线性插值能够一定程度上缓解这个问题（有限地增加了采样频率），因为其取的是2x2的像素范围，但是当情况更严重时，纹理的信息依旧会丢失。
 
 解决纹理信息因频率过高而发生信息丢失的一个经典方法就是多级渐进纹理（mipmap），它通过预计算为一张纹理生成多张不同级别的精细程度（逐层减半）的纹理，以此降低纹理信息频率。因此，以原始纹理为顶层，每下面一层是上一层的1/4大小，直到最后一层。最终，生成mipmap的纹理仅比不生成mipmap的纹理多出原纹理近1/3大小的存储。
 
