Paper Reading: update: fabric basis

--- a/Paper Reading/服装设计面料知识.md
+++ b/Paper Reading/服装设计面料知识.md
@@ -20,7 +20,7 @@
   * 矿物纤维：由岩石矿物中获取的纤维，一般用于工业，如石棉、碳纤维等
 * 人造纤维
   * 再生纤维：以某些天然高分子化合物或者其衍生物为原料，经过溶解后制成纺织溶液（并不改变其分子的化学性质），再被制成纤维。再生纤维的原料可以来自于动物、植物、矿物等一系列的可再生资源
-  * 化学纤维：以天然气、煤炭、石油等矿物里提取出来的一些高分子化合物，通过一系列化合反应使其分子的结构发生改变，从而制得一系列的连续的长纤维
+  * 化学纤维：以天然气、煤炭、石油等矿物里提取出来的一些高分子化合物为原料，通过一系列化合反应使其分子的结构发生改变，从而制得一系列的连续的长纤维
 
 在现如今的纺织工业中，动物纤维和植物纤维依然被广泛运用，矿物纤维相对来说运用较少。天然纤维和人造纤维各有其优缺点。一般情况下，天然纤维织造的织物价格相对于人造纤维织造的织物普遍要更昂贵一些。
 
@@ -124,6 +124,8 @@
 
 #### 化学合成纤维
 
+从煤炭，石油中提取的高分子化合物，通过一系列化学反应，改变其分子结构，获取的可用纤维。其中具有代表性的就是六大纶。
+
 * 聚酰胺纤维（尼龙、锦纶）：锦纶最大的优点是结实耐磨，且重量较轻、弹性较好，其长纤维多用于针织和丝绸工业，短纤维大多与羊毛或毛型化纤混纺
 
 ![22](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\22.png)
@@ -154,6 +156,8 @@
 
 ## 纱线的分类及特征
 
+纱线是纱和线的统称，两者有所区别。纱是由许多长度不等的短纤维通过捻接的方法制成，或由很长的连续单丝捻合而成。线是由两根或两根以上的单纱并合加捻制成的，也称为股线。
+
 ### 纱线的基本分类
 
 纱线一般可分为纯纺纱线和混纺纱线。顾名思义，纯纺纱线是由一种纤维材料纺成的纱，如棉纱、毛纱等，这类纱线是纯纺织物。混纺纱线是由两种或两种以上的纤维纺成的纱，如涤纶与棉的混纺、羊毛与粘胶纤维的混纺等，这类混纺可用于同时突出各种纤维的优点。
@@ -161,6 +165,8 @@
 除了上述的分类方法，还可以根据纱线的粗细程度或者纺纱方式对纱线进行分类。
 
 纱线按原料纤维的长短可分为短纤纱和长丝纱。由一些长丝纤维所纺成的纱称为长丝纱，如天然蚕丝、化纤长丝、人造丝等。而主要由短纤维纺成的纱称为短纤纱，如棉纱、毛纱、麻纱等。注意原料纤维短不代表纺出的纱线长度短，二者没有关系。
+
+纱线按织造的用途还可以分为
 
 纺纱方式决定了纱线最后的呈现形态。常见的花式纱线，有竹节纱、波纹纱、大肚纱、蜻蜓纱、圈圈纱、雪尼尔纱等，种类繁多。
 
