Paper Reading: update: fabric basis

--- a/Paper Reading/服装设计面料知识.md
+++ b/Paper Reading/服装设计面料知识.md
@@ -124,7 +124,7 @@
 
 #### 化学合成纤维
 
-从煤炭，石油中提取的高分子化合物，通过一系列化学反应，改变其分子结构，获取的可用纤维。其中具有代表性的就是六大纶。
+化学合成纤维是从煤炭，石油中提取的高分子化合物，通过一系列化学反应，改变其分子结构，获取的可用纤维。其中具有代表性的就是六大纶。
 
 * 聚酰胺纤维（尼龙、锦纶）：锦纶最大的优点是结实耐磨，且重量较轻、弹性较好，其长纤维多用于针织和丝绸工业，短纤维大多与羊毛或毛型化纤混纺
 
